--- a/public/index.html
+++ b/public/index.html
@@ -83,30 +83,31 @@
             <div class="card-thumb"></div>
             <div class="card-body">
               <div class="card-title">内製システム開発</div>
+              <div class="card-desc">半導体製造業のお客様</div>
             </div>
           </article>
 
           <article class="card" role="listitem">
             <div class="card-thumb"></div>
             <div class="card-body">
-              <div class="card-title">株式会社△△様</div>
-              <div class="card-desc">EC / 業務改善</div>
+              <div class="card-title">EC / 業務改善</div>
+              <div class="card-desc">日本の食品業界トップ10のお客様</div>
             </div>
           </article>
 
           <article class="card" role="listitem">
             <div class="card-thumb"></div>
             <div class="card-body">
-              <div class="card-title">株式会社□□様</div>
-              <div class="card-desc">AI導入支援</div>
+              <div class="card-title">AIによる業務自動化</div>
+              <div class="card-desc">従業員300名規模の商社様</div>
             </div>
           </article>
 
           <article class="card" role="listitem">
             <div class="card-thumb"></div>
             <div class="card-body">
-              <div class="card-title">株式会社◇◇様</div>
-              <div class="card-desc">クラウド移行</div>
+              <div class="card-title">クラウド移行</div>
+              <div class="card-desc">各拠点統合に伴う管理システム強化</div>
             </div>
           </article>
         </div>
