--- a/public/index.html
+++ b/public/index.html
@@ -133,10 +133,9 @@
           </p>
 
           <div class="pill-group">
-            <span class="pill">AWS × 協働内製化</span>
-            <span class="pill">生成AI × 業務効率化</span>
+            <span class="pill">AI搭載自動化</span>
+            <span class="pill">内製化アプリ</span>
             <span class="pill">セキュリティ強化</span>
-            <span class="pill">スタートアップ支援</span>
           </div>
         </div>
 
@@ -265,6 +264,7 @@
          CONTACT (bottom fixed style like JP sites)
     ========================== -->
     <section id="contact" class="contact-float">
+    <div class="container-xl contact-inner">
       <a href="tel:00-0000-0000" class="contact-chip">
         <span class="chip-ic">☎</span>
         <span>00-0000-0000</span>
@@ -273,6 +273,7 @@
         <span class="chip-ic">✉</span>
         <span>お問い合わせフォーム</span>
       </a>
+    </div>
     </section>
   </main>
 
