--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -109,10 +109,10 @@
 
 <button
   type="button"
-  class="logout-btn"
+  class="btn-outline-gray"
   onclick="logout()"
 >
-  Logout
+  ログアウト
 </button>
     </div>
   </div>
