--- a/public/index.html
+++ b/public/index.html
@@ -48,8 +48,7 @@
       <div class="container-xl hero-inner">
         <div class="hero-copy">
           <h1 class="hero-title">
-            デジタル技術で<br />
-          　世界を変える。
+            デジタル先進技術で世界を変える
           </h1>
           <p class="hero-sub">
             DIGITAL CREATIVE SOLUTION
