--- a/public/login.html
+++ b/public/login.html
@@ -7,133 +7,86 @@
 
   <!-- CSS CHUNG -->
   <link rel="stylesheet" href="auth.css">
-
-  <!-- ✅ Page layout only for this page -->
-  <style>
-    /* Center the whole login area like the "after" image */
-    .auth-page{
-      min-height: 100vh;
-      display: flex;
-      align-items: flex-start;
-      justify-content: center;
-      padding: 48px 16px;
-    }
-
-    /* Limit width so the card doesn't stretch too wide */
-    .auth-wrap{
-      width: 100%;
-      max-width: 860px; /* adjust: 760~900 ok */
-    }
-
-    /* Make the card narrower than the wrapper (like the after image) */
-    .auth-wrap .container{
-      max-width: 700px;     /* keep old card width */
-      margin: 0;            /* remove old auto margin behavior */
-    }
-
-    /* Title aligned with the card */
-    .auth-wrap .page-title{
-      max-width: 700px;
-      margin: 0 0 16px;
-      padding: 0 8px;
-    }
-
-    .auth-wrap .note{
-      max-width: 700px;
-      margin: 16px 0 0;
-      padding: 0 8px;
-      text-align: left; /* looks closer to JP sites */
-    }
-
-    /* Optional: align buttons to look like screenshot */
-    .button-area{
-      justify-content: space-between;
-      gap: 16px;
-    }
-  </style>
 </head>
 
 <body>
 
-  <div class="auth-page">
-    <div class="auth-wrap">
+  <!-- PAGE TITLE -->
+  <div class="page-title">ログイン</div>
 
-      <!-- PAGE TITLE -->
-      <div class="page-title">ログイン</div>
+  <!-- LOGIN FORM -->
+  <div class="container">
 
-      <!-- LOGIN FORM -->
-      <div class="container">
-
-        <!-- Eメール -->
-        <div class="row">
-          <div class="content">
-            <div class="label">
-              Eメール<span class="required">＊</span>
-            </div>
-            <input
-              type="email"
-              class="input"
-              id="email"
-              required
-              autocomplete="email"
-            >
-          </div>
+    <!-- Eメール -->
+    <div class="row">
+      <div class="content">
+        <div class="label">
+          Eメール<span class="required">＊</span>
         </div>
-
-        <!-- パスワード -->
-        <div class="row">
-          <div class="content">
-            <div class="label">
-              パスワード<span class="required">＊</span>
-            </div>
-            <input
-              type="password"
-              class="input"
-              id="password"
-              required
-              autocomplete="current-password"
-            >
-          </div>
-        </div>
-
-        <!-- ERROR MESSAGE -->
-        <div class="row" id="error-row" style="display:none;">
-          <div class="content">
-            <div id="error-message" style="color:#d93025; font-size:14px;"></div>
-          </div>
-        </div>
-
-        <!-- BUTTONS -->
-        <div class="button-area">
-
-          <!-- 会員登録 -->
-          <button
-            type="button"
-            class="confirm-btn"
-            onclick="location.href='register.html'"
-          >
-            新規会員登録
-          </button>
-
-          <!-- ログイン -->
-          <button
-            type="button"
-            class="confirm-btn"
-            onclick="login()"
-          >
-            ログイン
-          </button>
-
-        </div>
-
+        <input
+          type="email"
+          class="input"
+          id="email"
+          required
+          autocomplete="email"
+        >
       </div>
+    </div>
 
-      <!-- NOTE -->
-      <div class="note">
-        登録済みのメールアドレスとパスワードを入力してください。
+    <!-- パスワード -->
+    <div class="row">
+      <div class="content">
+        <div class="label">
+          パスワード<span class="required">＊</span>
+        </div>
+        <input
+          type="password"
+          class="input"
+          id="password"
+          required
+          autocomplete="current-password"
+        >
       </div>
+    </div>
+
+    <!-- ERROR MESSAGE -->
+    <div class="row" id="error-row" style="display:none;">
+      <div class="content">
+        <div
+          id="error-message"
+          style="color:#d93025; font-size:14px;"
+        ></div>
+      </div>
+    </div>
+
+    <!-- BUTTONS -->
+    <div class="button-area">
+
+      <!-- 会員登録 -->
+      <button
+        type="button"
+        class="confirm-btn"
+        onclick="location.href='register.html'"
+      >
+        新規会員登録
+      </button>
+
+      <!-- ログイン -->
+      <button
+        type="button"
+        class="confirm-btn"
+        onclick="login()"
+      >
+        ログイン
+      </button>
 
     </div>
+
+  </div>
+
+  <!-- NOTE -->
+  <div class="note">
+    登録済みのメールアドレスとパスワードを入力してください。
   </div>
 
   <!-- SCRIPT -->
@@ -149,7 +102,8 @@
       errorMessage.textContent = "";
 
       if (!email || !password) {
-        errorMessage.textContent = "メールアドレスとパスワードを入力してください";
+        errorMessage.textContent =
+          "メールアドレスとパスワードを入力してください";
         errorRow.style.display = "block";
         return;
       }
@@ -157,20 +111,27 @@
       try {
         const response = await fetch("/api/login", {
           method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ email, password }),
-          credentials: "include"
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({
+            email,
+            password
+          })
         });
 
-        const result = await response.json().catch(() => ({}));
+        const result = await response.json();
 
         if (!response.ok) {
-          errorMessage.textContent = result.message || "ログインに失敗しました";
+          errorMessage.textContent =
+            result.message || "ログインに失敗しました";
           errorRow.style.display = "block";
           return;
         }
 
+        /* ✅ Login success (Lv3: session cookie set by backend) */
         location.href = "dashboard.html";
+
       } catch (err) {
         console.error(err);
         errorMessage.textContent = "通信エラーが発生しました";
