--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -136,7 +136,11 @@
             <button class="edit-btn">編集</button>
           </td>
         </tr>
-
+        <tr>
+  <th>ロール</th>
+  <td class="value" id="profile-role">---</td>
+  <td class="action"></td>
+</tr>
         <tr>
           <th>電話番号</th>
           <td class="value" id="profile-phone">---</td>
@@ -165,6 +169,7 @@
       // Fill table values
       document.getElementById("profile-name").textContent = user.name ?? "";
       document.getElementById("profile-email").textContent = user.email ?? "";
+      document.getElementById("profile-role").textContent = user.role ?? "";
       document.getElementById("profile-phone").textContent = user.phone ?? "";
 
       document.body.style.visibility = "visible";
