--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -104,13 +104,9 @@
     <tr>
       <th>Eメール</th>
       <td id="profile-email">---</td>
-      <td class="action"></td>
-    </tr>
-
-    <tr>
-      <th>ロール</th>
-      <td id="profile-role">---</td>
-      <td class="action"></td>
+      <td class="action">
+        <button class="edit-btn" data-field="email">編集</button>
+      </td>
     </tr>
 
     <tr>
@@ -119,6 +115,12 @@
       <td class="action">
         <button class="edit-btn" data-field="phone">編集</button>
       </td>
+    </tr>
+
+    <tr>
+      <th>ロール</th>
+      <td id="profile-role">---</td>
+      <td class="action"></td>
     </tr>
 
     <tr>
