--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -5,7 +5,9 @@
   <title>Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <link rel="stylesheet" href="auth.css">
   <link rel="stylesheet" href="style.css">
+
 
   <style>
     body { visibility: hidden; }
@@ -85,7 +87,7 @@
 <!-- HEADER -->
 <div class="dashboard-header">
   <div class="dashboard-title" id="dashboard-title">Dashboard</div>
-  <button type="button" onclick="logout()">ログアウト</button>
+  <button type="button" class="back-btn" onclick="logout()">ログアウト</button>
 </div>
 
 <!-- CONTENT -->
