--- a/public/index.html
+++ b/public/index.html
@@ -4,59 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ngoc-web - Corporate Website</title>
+  <link rel="stylesheet" href="base.css" />
   <link rel="stylesheet" href="style.css" />
-
-  <!-- Auth menu (Amazon-style hover logout) -->
-  <style>
-    /* Nếu anh muốn “pure CSS file”, chuyển block này vào style.css */
-
-    .auth-menu{
-      position: relative;
-      display: inline-block;
-    }
-
-    .auth-dropdown{
-      position: absolute;
-      top: calc(100% + 8px);
-      right: 0;
-      min-width: 160px;
-      background: #fff;
-      border: 1px solid var(--border);
-      border-radius: 10px;
-      box-shadow: var(--shadow);
-      padding: 8px;
-      display: none;
-      z-index: 100;
-    }
-
-    /* Chỉ show dropdown khi đã login */
-    .auth-menu.is-logged-in:hover .auth-dropdown{
-      display: block;
-    }
-
-    .auth-logout-btn{
-      width: 100%;
-      padding: 9px 12px;
-      background: #fff;
-      border: none;
-      border-radius: 8px;
-      font-size: 14px;
-      cursor: pointer;
-      text-align: left;
-      font-weight: 700;
-      color: #111827;
-    }
-    .auth-logout-btn:hover{
-      background: #f5f5f5;
-    }
-  </style>
 </head>
 
 <body class="home">
-
-  <!-- =========================
-       HEADER (sticky)
-  ========================== -->
+  <!-- HEADER -->
   <header class="site-header">
     <div class="container-xl header-inner">
       <a class="brand" href="index.html" aria-label="ngoc-web home">
@@ -76,38 +29,21 @@
         <a href="#contact">お問い合わせ</a>
       </nav>
 
-      <!-- ✅ Auth Slot: will become Login or MyPage (and hover logout) -->
-      <div class="header-right" id="header-auth-slot" style="visibility:hidden;">
-        <div class="auth-menu" id="auth-menu">
-          <a class="btn btn-outline" href="login.html" id="auth-main-btn">ログイン</a>
-
-          <!-- dropdown (only used when logged in) -->
-          <div class="auth-dropdown" id="auth-dropdown" aria-label="account menu">
-            <button type="button" class="auth-logout-btn" onclick="logoutFromIndex()">
-              ログアウト
-            </button>
-          </div>
-        </div>
+      <div class="header-right">
+        <a class="btn btn-outline" href="login.html">ログイン</a>
       </div>
-
     </div>
   </header>
 
-  <!-- =========================
-       HERO
-  ========================== -->
   <main>
+    <!-- HERO -->
     <section class="hero">
       <div class="hero-bg"></div>
 
       <div class="container-xl hero-inner">
         <div class="hero-copy">
-          <h1 class="hero-title">
-            デジタル先進技術で世界を変える
-          </h1>
-          <p class="hero-sub">
-            DIGITAL CREATIVE SOLUTION
-          </p>
+          <h1 class="hero-title">デジタル先進技術で世界を変える</h1>
+          <p class="hero-sub">DIGITAL CREATIVE SOLUTION</p>
 
           <div class="hero-actions">
             <a class="btn btn-primary" href="#about">About Us</a>
@@ -122,9 +58,7 @@
       </div>
     </section>
 
-    <!-- =========================
-         WORKS / CASES
-    ========================== -->
+    <!-- WORKS -->
     <section id="works" class="section">
       <div class="container-xl">
         <div class="section-head">
@@ -168,9 +102,7 @@
       </div>
     </section>
 
-    <!-- =========================
-         ABOUT / BUSINESS SOLUTION
-    ========================== -->
+    <!-- ABOUT -->
     <section id="about" class="section section-alt">
       <div class="container-xl split">
         <div class="split-left">
@@ -203,9 +135,7 @@
       </div>
     </section>
 
-    <!-- =========================
-         SERVICES
-    ========================== -->
+    <!-- SERVICES -->
     <section id="services" class="section">
       <div class="container-xl">
         <div class="section-head">
@@ -265,9 +195,7 @@
       </div>
     </section>
 
-    <!-- =========================
-         RECRUIT BANNER
-    ========================== -->
+    <!-- RECRUIT -->
     <section id="recruit" class="recruit">
       <div class="container-xl recruit-inner">
         <div>
@@ -281,9 +209,7 @@
       </div>
     </section>
 
-    <!-- =========================
-         NEWS
-    ========================== -->
+    <!-- NEWS -->
     <section id="news" class="section">
       <div class="container-xl">
         <div class="section-head row-between">
@@ -314,9 +240,7 @@
       </div>
     </section>
 
-    <!-- =========================
-         CONTACT
-    ========================== -->
+    <!-- CONTACT -->
     <section id="contact" class="contact-float">
       <div class="container-xl contact-inner">
         <a href="tel:00-0000-0000" class="contact-chip">
@@ -331,9 +255,7 @@
     </section>
   </main>
 
-  <!-- =========================
-       FOOTER
-  ========================== -->
+  <!-- FOOTER -->
   <footer class="site-footer">
     <div class="container-xl footer-grid">
       <div class="footer-company">
@@ -351,7 +273,6 @@
       <div class="footer-links footer-block">
         <a href="#services">AI搭載自動化</a>
         <a href="#services">内製化アプリ開発</a>
-        <a href="#services">クラウド移行</a>
         <a href="#services">セキュリティ強化</a>
       </div>
 
@@ -370,62 +291,6 @@
     </div>
   </footer>
 
-  <!-- =========================
-       Auth-aware header logic
-  ========================== -->
-  <script>
-    async function logoutFromIndex() {
-      try {
-        await fetch("/api/logout", {
-          method: "POST",
-          credentials: "include",
-        });
-      } catch (e) {
-        console.error("logout failed:", e);
-      } finally {
-        // Refresh index to reset header state
-        location.href = "index.html";
-      }
-    }
-
-    (async function initHeaderAuth() {
-      const slot = document.getElementById("header-auth-slot");
-      const menu = document.getElementById("auth-menu");
-      const mainBtn = document.getElementById("auth-main-btn");
-
-      if (!slot || !menu || !mainBtn) return;
-
-      try {
-        const res = await fetch("/api/me", {
-          method: "GET",
-          credentials: "include",
-        });
-
-        if (res.ok) {
-          // ✅ Logged in
-          mainBtn.textContent = "マイページ";
-          mainBtn.href = "dashboard.html";
-          mainBtn.className = "btn btn-primary";
-          menu.classList.add("is-logged-in");
-        } else {
-          // ❌ Not logged in
-          mainBtn.textContent = "ログイン";
-          mainBtn.href = "login.html";
-          mainBtn.className = "btn btn-outline";
-          menu.classList.remove("is-logged-in");
-        }
-      } catch (e) {
-        // Network error -> fallback to login
-        mainBtn.textContent = "ログイン";
-        mainBtn.href = "login.html";
-        mainBtn.className = "btn btn-outline";
-        menu.classList.remove("is-logged-in");
-      } finally {
-        // prevent flicker
-        slot.style.visibility = "visible";
-      }
-    })();
-  </script>
-
+  <script src="script.js"></script>
 </body>
 </html>
