--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -12,10 +12,20 @@
 
 <body class="is-protected">
   <!-- HEADER -->
-  <div class="dashboard-header">
-    <div class="dashboard-title" id="dashboard-title">Dashboard</div>
-    <button type="button" class="btn btn-outline" onclick="logout()">ログアウト</button>
-  </div>
+<div class="dashboard-header">
+  <a class="brand" href="index.html" aria-label="ngoc-web home">
+    <div class="brand-mark">N</div>
+    <div class="brand-text">
+      <div class="brand-name">ngoc-web</div>
+      <div class="brand-sub">DIGITAL CREATIVE SOLUTION</div>
+    </div>
+  </a>
+
+  <div class="dashboard-title" id="dashboard-title">Dashboard</div>
+
+  <button type="button" class="back-btn" onclick="logout()">ログアウト</button>
+</div>
+
 
   <!-- CONTENT -->
   <div class="dashboard-content">
