--- a/public/index.html
+++ b/public/index.html
@@ -75,13 +75,13 @@
         </div>
 
         <div class="cards-row" role="list">
-          <article class="card" role="listitem" href="post.html?id=ca7e657c-55f1-4da5-b7c3-402851d54f0b">
+          <a class="card" role="listitem" href="post.html?id=ca7e657c-55f1-4da5-b7c3-402851d54f0b">
             <div class="card-thumb"></div>
             <div class="card-body">
               <div class="card-title">内製システム開発</div>
               <div class="card-desc">半導体製造業のお客様</div>
             </div>
-          </article>
+          </a>
 
           <article class="card" role="listitem">
             <div class="card-thumb"></div>
