--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
           <a class="card" role="listitem" href="post.html?id=ca7e657c-55f1-4da5-b7c3-402851d54f0b">
             <div class="card-thumb"></div>
             <div class="card-body">
-              <div class="card-title">内製システム開発</div>
+              <div class="card-title">AI搭載自動化</div>
               <div class="card-desc">半導体製造業のお客様</div>
             </div>
           </a>
@@ -86,7 +86,7 @@
           <article class="card" role="listitem">
             <div class="card-thumb"></div>
             <div class="card-body">
-              <div class="card-title">EC / 業務改善</div>
+              <div class="card-title">内製化アプリ開発</div>
               <div class="card-desc">日本の食品業界トップ10のお客様</div>
             </div>
           </article>
@@ -94,7 +94,7 @@
           <article class="card" role="listitem">
             <div class="card-thumb"></div>
             <div class="card-body">
-              <div class="card-title">AIによる業務自動化</div>
+              <div class="card-title">クラウド移行</div>
               <div class="card-desc">従業員300名規模の商社様</div>
             </div>
           </article>
@@ -102,7 +102,7 @@
           <article class="card" role="listitem">
             <div class="card-thumb"></div>
             <div class="card-body">
-              <div class="card-title">クラウド移行</div>
+              <div class="card-title">セキュリティ強化</div>
               <div class="card-desc">各拠点統合に伴う管理システム強化</div>
             </div>
           </article>
