--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
         </div>
 
         <div class="cards-row" role="list">
-          <a class="card" role="listitem" href="post.html?id=ca7e657c-55f1-4da5-b7c3-402851d54f0b">
+          <a class="card" role="listitem">
             <div class="card-thumb"></div>
             <div class="card-body">
               <div class="card-title">AI搭載自動化</div>
@@ -83,29 +83,29 @@
             </div>
           </a>
 
-          <article class="card" role="listitem">
+          <a class="card" role="listitem" href="post.html?id=ca7e657c-55f1-4da5-b7c3-402851d54f0b">
             <div class="card-thumb"></div>
             <div class="card-body">
               <div class="card-title">内製化アプリ開発</div>
               <div class="card-desc">日本の食品業界トップ10のお客様</div>
             </div>
-          </article>
+          </a>
 
-          <article class="card" role="listitem">
+          <a class="card" role="listitem">
             <div class="card-thumb"></div>
             <div class="card-body">
               <div class="card-title">クラウド移行</div>
-              <div class="card-desc">従業員300名規模の商社様</div>
+              <div class="card-desc">各拠点統合に伴う管理システム強化</div>
             </div>
-          </article>
+          </a>
 
-          <article class="card" role="listitem">
+          <a class="card" role="listitem">
             <div class="card-thumb"></div>
             <div class="card-body">
               <div class="card-title">セキュリティ強化</div>
-              <div class="card-desc">各拠点統合に伴う管理システム強化</div>
+              <div class="card-desc">従業員300名規模の商社様</div>
             </div>
-          </article>
+          </a>
         </div>
       </div>
     </section>
