post with download

--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
             </div>
           </a>
 
-          <a class="card" role="listitem">
+          <a class="card" role="listitem" href="post.html?id=274b1ed7-8767-4282-a08c-2637e2b61125">
             <div class="card-thumb"></div>
             <div class="card-body">
               <div class="card-title">セキュリティ強化</div>
