--- a/public/post.html
+++ b/public/post.html
@@ -146,7 +146,7 @@
       <div class="attach-head">
         <div>
           <div class="attach-title">添付資料</div>
-          <div class="attach-sub">閲覧・ダウンロードにはログインが必要です</div>
+          <div class="attach-sub">閲覧にはログインが必要です</div>
         </div>
       </div>
       <div id="attach-list" class="attach-list"></div>
