--- a/public/post.html
+++ b/public/post.html
@@ -18,9 +18,10 @@
 
   function humanType(ct) {
     if (!ct) return "";
-    if (ct.includes("pdf")) return "PDF";
-    if (ct.includes("image")) return "Image";
-    if (ct.includes("zip")) return "ZIP";
+    const s = String(ct).toLowerCase();
+    if (s.includes("pdf")) return "PDF";
+    if (s.includes("image")) return "Image";
+    if (s.includes("zip")) return "ZIP";
     return ct;
   }
 
@@ -37,7 +38,8 @@
 
     const meta = document.createElement("div");
     meta.className = "attach-meta";
-    meta.textContent = humanType(att.content_type || "");
+    const t = humanType(att.content_type);
+    meta.textContent = t ? t : "";
 
     left.appendChild(name);
     if (meta.textContent) left.appendChild(meta);
@@ -66,20 +68,19 @@
     return data;
   }
 
-  async function isLoggedIn() {
-    const res = await fetch("/api/me", {
-      method: "GET",
-      credentials: "include",
-      cache: "no-store",
-    });
-    return res.ok;
+  async function checkLoggedIn() {
+    try {
+      const res = await fetch("/api/me", { method: "GET", credentials: "include" });
+      return res.ok;
+    } catch {
+      return false;
+    }
   }
 
   async function fetchAttachments(postId) {
     const res = await fetch(`/api/posts/${encodeURIComponent(postId)}/attachments`, {
       method: "GET",
       credentials: "include",
-      cache: "no-store",
     });
 
     if (res.status === 401) return { unauthorized: true, items: [] };
@@ -91,88 +92,109 @@
     return { unauthorized: false, items };
   }
 
-  // ==============================
-  // init page
-  // ==============================
+  function bindEnterClick(el, handler) {
+    el.addEventListener("keydown", (e) => {
+      if (e.key === "Enter" || e.key === " ") {
+        e.preventDefault();
+        handler();
+      }
+    });
+  }
+
   (async function init() {
     const params = new URLSearchParams(location.search);
     const postId = (params.get("id") || "").trim();
 
+    const titleEl = document.getElementById("post-title");
+    const dateEl = document.getElementById("post-date");
+    const bodyEl = document.getElementById("post-content");
+
+    const head = document.getElementById("attach-head");
+    const attachBody = document.getElementById("attach-body");
+    const attachList = document.getElementById("attach-list");
+
     if (!postId) {
-      document.getElementById("post-title").textContent = "Not Found";
+      titleEl.textContent = "Not Found";
+      dateEl.textContent = "";
+      bodyEl.innerHTML = "";
+      // click 添付資料 -> login
+      head.addEventListener("click", () => location.href = "login.html");
+      bindEnterClick(head, () => location.href = "login.html");
       return;
     }
 
-    // 1) render post (public)
+    // 1) load post
     try {
       const post = await fetchPost(postId);
       document.title = post.title || "Post";
-      document.getElementById("post-title").textContent = post.title || "";
-      document.getElementById("post-date").textContent = ymd(post.created_at);
-      document.getElementById("post-content").innerHTML = escapeToBr(post.content || "");
+      titleEl.textContent = post.title || "";
+      dateEl.textContent = ymd(post.created_at);
+      bodyEl.innerHTML = escapeToBr(post.content || "");
     } catch (e) {
       console.error(e);
-      document.getElementById("post-title").textContent = "Not Found";
+      titleEl.textContent = "Not Found";
+      dateEl.textContent = "";
+      bodyEl.innerHTML = "";
+      head.addEventListener("click", () => location.href = "login.html");
+      bindEnterClick(head, () => location.href = "login.html");
       return;
     }
 
-    // 2) Attachments: "click to open"
-    const card = document.getElementById("attach-card");
-    const sub = document.getElementById("attach-sub");
-    const list = document.getElementById("attach-list");
+    // 2) auth check
+    const loggedIn = await checkLoggedIn();
 
-    let loaded = false;
+    if (!loggedIn) {
+      // ✅ đúng yêu cầu anh: click 添付資料 -> bay luôn đến login
+      head.addEventListener("click", () => location.href = "login.html");
+      bindEnterClick(head, () => location.href = "login.html");
+      attachBody.style.display = "none";
+      return;
+    }
 
-    // trạng thái ban đầu: luôn hiện nhưng chưa load file
-    sub.textContent = "クリックして表示（ログインが必要）";
-    list.innerHTML = "";
+    // 3) logged in -> click head: toggle list
+    let opened = false;
 
-    card.addEventListener("click", async (e) => {
-      // nếu user click đúng vào link "開く" thì thôi (đừng intercept)
-      if (e.target.closest("a")) return;
+    async function openOrToggle() {
+      if (!opened) {
+        // load attachments once
+        try {
+          const r = await fetchAttachments(postId);
+          if (r.unauthorized) {
+            location.href = "login.html";
+            return;
+          }
 
-      // nếu đã load rồi thì toggle mở/đóng đơn giản
-      if (loaded) {
-        const isHidden = list.style.display === "none";
-        list.style.display = isHidden ? "block" : "none";
-        sub.textContent = isHidden ? "資料一覧" : "クリックして折りたたむ";
-        return;
-      }
+          const items = r.items || [];
+          attachList.innerHTML = "";
 
-      // lần click đầu: check login
-      const ok = await isLoggedIn();
-      if (!ok) {
-        // ✅ giống production: không show tài liệu, chuyển login
-        location.href = "login.html";
-        return;
-      }
+          if (!items.length) {
+            // nếu không có file, vẫn mở nhưng hiển thị 1 dòng gọn
+            const empty = document.createElement("div");
+            empty.className = "attach-item";
+            empty.textContent = "添付資料はありません";
+            attachList.appendChild(empty);
+          } else {
+            items.forEach(att => attachList.appendChild(buildAttachmentRow(att)));
+          }
 
-      // logged in -> load attachments
-      sub.textContent = "読み込み中...";
-      try {
-        const r = await fetchAttachments(postId);
-
-        if (r.unauthorized) {
-          location.href = "login.html";
+          attachBody.style.display = "block";
+          opened = true;
+          return;
+        } catch (e) {
+          console.error(e);
+          // fail thì không mở
+          attachBody.style.display = "none";
+          opened = false;
           return;
         }
-
-        if (!r.items.length) {
-          sub.textContent = "添付資料はありません";
-          loaded = true;
-          return;
-        }
-
-        list.innerHTML = "";
-        r.items.forEach(att => list.appendChild(buildAttachmentRow(att)));
-
-        list.style.display = "block";
-        sub.textContent = "資料一覧";
-        loaded = true;
-      } catch (err) {
-        console.error(err);
-        sub.textContent = "添付資料の取得に失敗しました";
       }
-    });
+
+      // toggle close/open
+      if (attachBody.style.display === "none") attachBody.style.display = "block";
+      else attachBody.style.display = "none";
+    }
+
+    head.addEventListener("click", openOrToggle);
+    bindEnterClick(head, openOrToggle);
   })();
 </script>
